@@ -3,13 +3,13 @@
     public readonly struct Size
     {
         public const float Epsilon = 0.001f;
-        public const float Infinity = float.PositiveInfinity;
+        public const float Infinity = 14_400;
 
         public readonly float Width;
         public readonly float Height;
         
         public static Size Zero { get; } = new Size(0, 0);
-        public static Size Max { get; } = new Size(14_400, 14_400);
+        public static Size Max { get; } = new Size(Infinity, Infinity);
 
         public Size(float width, float height)
         {
